--- a/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork.csproj
@@ -110,7 +110,9 @@
     <Content Include="assets\js\util.js" />
     <Content Include="dbscripts\SocialNetwork.sql" />
     <Content Include="Default.aspx" />
+    <Content Include="ext\ResetPassword.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="img\nopic.jpg" />
     <Content Include="img\sample\sample.jpg" />
     <Content Include="master\menubar-member.ascx" />
     <Content Include="master\menubar.ascx" />
@@ -127,6 +129,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ext\ResetPassword.aspx.cs">
+      <DependentUpon>ResetPassword.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ext\ResetPassword.aspx.designer.cs">
+      <DependentUpon>ResetPassword.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -162,7 +171,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="services\UserService.cs" />
+    <Compile Include="Services\UserService.cs" />
     <Compile Include="subpages\Dash.aspx.cs">
       <DependentUpon>Dash.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
