--- a/SocialNetwork/Web.config
+++ b/SocialNetwork/Web.config
@@ -6,7 +6,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="conn" connectionString="Data Source=REINER-BOOTCAMP;Initial Catalog=SocialNetwork;User Id=sa;Password=iamreiner;" providerName="System.Data.SqlClient" />
+    <add name="conn" connectionString="Data Source=localhost;Initial Catalog=SocialNetwork;User Id=sa;Password=iamreiner;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
